Rename 'Future Events' to 'Upcoming Events'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ cover: '/images/wedding-robots-banner.jpg'
 
     <div class="clearfix">
 
-      <h1 class="event-time-heading fix-top">Future {% if site.event_label %} {{site.event_label}} {% else %} Events {% endif %} </h1>
+      <h1 class="event-time-heading fix-top">Upcoming {% if site.event_label %} {{site.event_label}} {% else %} Events {% endif %} </h1>
 
       {% for post in site.posts reversed %}
 
