Update index page.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@ layout: default
 cover: '/images/wedding-robots-banner.jpg'
 ---
 
-
-
+<p>Nerd Guide DC is devoted towards science, technology, and
+intellectual activities and events in the Washington DC area.
+Whether you're interested in science, technology, engineering,
+and/or mathematics, we've got you covered.
+<p>
 <div class="home">
 
     {% assign currentDate = 'now' | date: '%s' %}
