--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ and/or mathematics, we've got you covered.
 
           <a href="{{ post.url | prepend: site.baseurl }}">
             {% if post.cover %}
-            <div class="event-sqaure" style="background-image:url({{post.cover}});">
+            <div class="event-sqaure" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails' }});">
             {% else %}
             <div class="event-sqaure" style="background-image:url(/images/wedding-robots-banner.jpg);">
             {% endif %}
@@ -53,7 +53,7 @@ and/or mathematics, we've got you covered.
 
           <a href="{{ post.url | prepend: site.baseurl }}">
             {% if post.cover %}
-            <div class="event-sqaure" style="background-image:url({{post.cover}});">
+            <div class="event-sqaure" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails'}});">
             {% else %}
             <div class="event-sqaure" style="background-image:url(/images/wedding-robots-banner.jpg);">
             {% endif %}
