Fix spelling error: "sqaure" to "square"

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ and/or mathematics, we've got you covered.
 
         <a href="{{ post.url | prepend: site.baseurl }}">
 		  {% if post.cover %}
-		  <div class="event-sqaure" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails'}});">
+		  <div class="event-square" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails'}});">
 		  {% else %}
-		  <div class="event-sqaure" style="background-image:url(/images/wedding-robots-banner.jpg);">
+		  <div class="event-square" style="background-image:url(/images/wedding-robots-banner.jpg);">
 		  {% endif %}
 		    <h2>{{ post.title }} <span>{{ post.repeat_every }}</span></h2>
 		    <div class='event-square-overlay'></div>
@@ -56,9 +56,9 @@ and/or mathematics, we've got you covered.
 
           <a href="{{ post.url | prepend: site.baseurl }}">
             {% if post.cover %}
-            <div class="event-sqaure" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails' }});">
+            <div class="event-square" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails' }});">
             {% else %}
-            <div class="event-sqaure" style="background-image:url(/images/wedding-robots-banner.jpg);">
+            <div class="event-square" style="background-image:url(/images/wedding-robots-banner.jpg);">
             {% endif %}
               <h2>{{ post.title }} <span>{{ startYMD }}{%if startYMD != endYMD %} - {{ endYMD }}{% endif %}</span></h2>
                <div class='event-square-overlay'></div>
@@ -91,9 +91,9 @@ and/or mathematics, we've got you covered.
 
           <a href="{{ post.url | prepend: site.baseurl }}">
             {% if post.cover %}
-            <div class="event-sqaure" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails'}});">
+            <div class="event-square" style="background-image:url({{post.cover | replace_first: '/images', '/images/thumbnails'}});">
             {% else %}
-            <div class="event-sqaure" style="background-image:url(/images/wedding-robots-banner.jpg);">
+            <div class="event-square" style="background-image:url(/images/wedding-robots-banner.jpg);">
             {% endif %}
               <h2>{{ post.title }} <span>{{ startYMD }}{%if startYMD != endYMD %} - {{ endYMD }}{% endif %}</span></h2>
               <div class='event-square-overlay'></div>
