Cleanup index and about pages.

--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@ and/or mathematics, we've got you covered.
       {% endfor %}
     </div>
 
-    <h1 class="event-time-heading">Older events - <a href="/archive">Events Archive</a></h1>
+    <h1 class="event-time-heading">Older Events: <a href="/archive">Events Archive</a></h1>
 
 </div>
